--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,74 +12,8 @@
     <meta name="MobileOptimized" content="320">
   </head>
   <body>
-    <div id="app" class="container">
-      <div class="heading">
-        <h1 class="title">2048</h1>
-        <div class="scores-container">
-          <div class="score-container">0</div>
-          <div class="best-container">0</div>
-        </div>
-      </div>
-
-      <div class="above-game">
-        <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-        <a class="restart-button">New Game</a>
-      </div>
-
-      <div class="game-container">
-        <div class="game-message">
-          <p></p>
-          <div class="lower">
-            <a class="keep-playing-button">Keep going</a>
-            <a class="retry-button">Try again</a>
-          </div>
-        </div>
-
-        <div class="grid-container">
-          <div class="grid-row">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-          </div>
-          <div class="grid-row">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-          </div>
-          <div class="grid-row">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-          </div>
-          <div class="grid-row">
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-            <div class="grid-cell"></div>
-          </div>
-        </div>
-
-        <div class="tile-container">
-
-        </div>
-      </div>
-
-      <p class="game-explanation">
-        <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
-      </p>
-      <hr>
-      <p>
-        <strong class="important">Note:</strong> This site is not the official version of 2048, this is prototype which is created to compare written js with transpiled js from clojurescript. You can play official version on your phone via <a href="http://git.io/2048">http://git.io/2048.</a>
-      </p>
-      <hr>
-      <p>
-        Ripoff created by Juris Ruseckis. Official version Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
-      </p>
-      <input type="text">
+    <div id="app">
     </div>
-    <script src="js/compiled/clj_number_game_second.js" type="text/javascript"></script>
+    <script src="js/compiled/clj_number_game_third.js" type="text/javascript"></script>
   </body>
 </html>
